--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Translate Tool</title>
     <style>
-        textarea{
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-        }
-        #output{
-            border: 1px solid black;
-            height: 10vh;
-            width: 80%;
-            margin: 1rem;
-            padding: 1rem;
-        }
+      textarea {
+        display: block;
+        margin: 1rem;
+        padding: 1rem;
+      }
+      #output {
+        border: 1px solid black;
+        height: 10vh;
+        width: 80%;
+        margin: 1rem;
+        padding: 1rem;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Banana Talksssss</h1>
-    <textarea class="txt-area"
-    placeholder="Put your sentence in English and Translate it into Banana. " cols="30" rows="10"></textarea>
+    <textarea
+      class="txt-area"
+      placeholder="Put your sentence in English and Translate it into Banana. "
+      cols="30"
+      rows="10"
+    ></textarea>
     <button class="translate-btn">Translate</button>
-    <div style="font-size: large;">Output will come here👇</div>
-    <div id="output">Aman is Awesome!</div>
+    <div style="font-size: large">Output will come here👇</div>
+    <div id="output"></div>
 
     <script src="/app.js"></script>
-</body>
+  </body>
 </html>
