--- a/index.html
+++ b/index.html
@@ -4,33 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banana Translate Tool</title>
-    <style>
-      textarea {
-        display: block;
-        margin: 1rem;
-        padding: 1rem;
-      }
-      #output {
-        border: 1px solid black;
-        height: 10vh;
-        width: 80%;
-        margin: 1rem;
-        padding: 1rem;
-      }
-    </style>
+    <title>Minion | Translate Tool</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Banana Talksssss</h1>
-    <textarea
-      class="txt-area"
-      placeholder="Put your sentence in English and Translate it into Banana. "
-      cols="30"
-      rows="10"
-    ></textarea>
-    <button class="translate-btn">Translate</button>
-    <div style="font-size: large">Output will come here👇</div>
-    <div id="output"></div>
+    <nav>
+      <div class="header">
+        <h1>Minion Talksss</h1>
+      </div>
+    </nav>
+    <main>
+      <textarea class="txt-area"
+      placeholder="Put your sentence in English and Translate it into Minion Lang. "></textarea>
+      <button class="translate-btn">Translate to Minion</button>
+      <div>Output will come here👇</div>
+      <div id="output"></div>
+    </main>
+      <footer>
+        <h1>about</h1>
+        <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+      </footer>
 
     <script src="/app.js"></script>
   </body>
